2016-06-14 Jeff Lawson
    * Fix possible segfault in pg_select if you unset the array variable
      inside of the code body.

2015-08-08 Karl Lehenbauer
    * Update autoconf build to Tcl Extension Architecture (TEA) 3.9

2012-09-11 Karl Lehenbauer
    * Add -nodotfields option to pg_select.  if set it will inhibit
      the creation of the .tupno, .numcols and .headers fields
      in pg_select results.

    * Added new command, pg_set_single_row_mode aka ::pg::set_single_row_mode
      to enable retrieving query results row-by-row.

    * Add subcommands for direct execution of connection handles for
      conndefaults, set_single_row_mode, is_busy, blocking and
      cancel_request.

    * Make "make distclean" get rid of more autoconf work product.

    * Update README.freebsd.

    * Clean up compiler warnings.

2012-06-02 Karl Lehenbauer
    * Add new -withoutnulls option to pg_select, if set will remove null
      fields from the row result array.

2012-06-02 Karl Lehenbauer
    * Add new pg_dbinfo options "dbname", "user", "pass", "host", "port",
      "options", "status", "transaction_status", "error_message",
      "needs_password", "used_password", "used_ssl" to provide Tcl access
      to libpq connection parameter values established at connection time.

    * Fixed bug where pg_dbinfo would get a segmentation violation if passed
      an invalid connection handle.

    * Version bump to 1.9.

2011-02-15 Karl Lehenbauer
    * Removed arrVar variable and setting of it in Pg_result because it
      didn't do anything.

2010-07-01 Brett Schwarz
    * Added result callback for async queries via pg_sql. Based on code from Miguel Sofer. I
      had this code laying around and thought I had already committed, but turned out no.

2010-04-14 Karl Lehenbauer
    * Added new option to pg_dbinfo, "sql_count", returns the number of calls
      to pg_exec, pg_exec_prepared, pg_sendquery, pg_sendquery_prepared,