@@ -2752,23 +2752,29 @@ Pg_select(ClientData cData, Tcl_Interp *interp, int objc, Tcl_Obj *CONST objv[])
 	columnListObj = Tcl_NewListObj(ncols, columnNameObjs);
 	Tcl_IncrRefCount (columnListObj);
 
-	if (!noDotFields && Tcl_SetVar2Ex(interp, varNameString, ".headers", 
-	                  columnListObj, TCL_LEAVE_ERR_MSG) == NULL) goto done;
-
-	if (!noDotFields && Tcl_SetVar2Ex(interp, varNameString, ".numcols", 
-	                  Tcl_NewIntObj(ncols), TCL_LEAVE_ERR_MSG) == NULL) goto done;
-
 	retval = TCL_OK;
 
 	for (tupno = 0; tupno < PQntuples(result); tupno++)
 	{
-		if (!noDotFields && Tcl_SetVar2Ex(interp, varNameString, ".tupno", 
-		    Tcl_NewIntObj(tupno), TCL_LEAVE_ERR_MSG) == NULL)
-		{
-		    retval = TCL_ERROR;
-			goto done;
+		// Clear array before filling it in. Ignore failure because it's
+		// OK for the array not to exist at this point.
+		Tcl_UnsetVar2(interp, varNameString, NULL, 0);
+
+		// Set the dot fields in the array.
+		if (!noDotFields) {
+			if (Tcl_SetVar2Ex(interp, varNameString, ".headers",
+					  columnListObj, TCL_LEAVE_ERR_MSG) == NULL ||
+			    Tcl_SetVar2Ex(interp, varNameString, ".numcols",
+					  Tcl_NewIntObj(ncols), TCL_LEAVE_ERR_MSG) == NULL ||
+			    Tcl_SetVar2Ex(interp, varNameString, ".tupno",
+					  Tcl_NewIntObj(tupno), TCL_LEAVE_ERR_MSG) == NULL)
+			{
+				retval = TCL_ERROR;
+				goto done;
+			}
 		}
 
+		// Set all of the column values for this row.
 		for (column = 0; column < ncols; column++)
 		{
 			Tcl_Obj    *valueObj = NULL;
@@ -2800,6 +2806,7 @@ Pg_select(ClientData cData, Tcl_Interp *interp, int objc, Tcl_Obj *CONST objv[])
 			}
 		}
 
+		// Run the code body.
 		r = Tcl_EvalObjEx(interp, procStringObj, 0);
 		if ((r != TCL_OK) && (r != TCL_CONTINUE))
 		{
