@@ -1,3 +1,7 @@
+2016-06-15 Jeff Lawson
+    * unset array in pg_select at start of each loop to avoid elements
+      lingering over (#4).
+
 2016-06-14 Jeff Lawson
     * Fix possible segfault in pg_select if you unset the array variable
       inside of the code body.
